syntax = "proto3";
package codes.spectrum.svdb.model.v1;

import "v1/byte_field.proto";

option go_package = "gitlab.spectrumdata.tech/sd3/svdb/go/model/v1";

// запись с полями в виде байтов
message ByteRecord {
  // поля в виде байтов
  repeated ByteField fields = 1;
}
